[LD-746] Dark Mode Fixes / Polish (#1)
* fixed: FlySelect key rendering issue
* fixed: reapply settings pane padding change that was lost in moving styles over to local-components
* fixed FlySelect_Option site image
* fixed push/pull/download screen for dark mode, including background, text color, and progress bar
* fixed stepper disabled state for dark mode
* fixed neutral banner for dark mode + fixed some carousel styles as well
* fixed Pushing Site to Flywheel - Strip that says “Already connected to Flywheel”
* fixed username on connect to flywheel screen once logged in should be #c7c4c4
* fixed preferences scroll is cutting off at the top – see screenshots I sent
* fixed: all hrs/form stepper borders should be #434344...i noticed specifically the chevron separators on the stepped form, and the hr on the connect to flywheel page didn't match this
* fixed: sidebar icon hover should be white
* fixed: default site icon should be #434344
* fixed: we should darken the blur bg some

--- a/src/Banner/_Banner.sass
+++ b/src/Banner/_Banner.sass
@@ -9,9 +9,8 @@
 	.BannerContent
 		line-height: 18px
 
-	@at-root .SettingsPane_Content
-		&
-			margin-top: -11px
+	@at-root .SettingsPane_Content &
+		margin-top: -11px
 
 	@include selectable
 
@@ -59,9 +58,9 @@
 				background: $green-dark50
 
 	&.--Neutral
-		@include stripes($white, $gray2)
-		border-bottom: 1px solid $gray15
-		color: $gray-dark
+		@include theme-stripes-white-else-graydark
+		@include theme-border
+		@include theme-color-graydark-else-white
 
 		strong
 			font-weight: 700
@@ -78,11 +77,11 @@
 
 		.Dismiss
 			svg path
-				fill: $gray
+				@include theme-fill-gray-else-white
 
 			&:hover
 				svg path
-					fill: $gray-dark
+					@include theme-fill-graydark-else-gray25
 
 	button.CTA
 		margin-left: auto
@@ -129,14 +128,18 @@
 		align-items: center
 
 		@at-root .Banner.--Neutral .Carousel
-			border-right-color: $gray15
+			@include theme-border-right
 
 			.CarouselItem
 				border-color: $gray75
 
 				&.--Active
-					background-color: $gray-dark
-					border-color: $gray-dark
+					@include if-theme-light()
+						background-color: $gray-dark
+						border-color: $gray-dark
+					@include if-theme-dark()
+						background-color: $white
+						border-color: $white
 
 		.CarouselItem
 			display: block
