--- a/styles/_typography.sass
+++ b/styles/_typography.sass
@@ -21,4 +21,4 @@
 		@include if-theme-light()
 			background: $white
 		@include if-theme-dark()
-			background: $gray-dark-alt
+			background: darken($gray-dark-alt, 1.15)
