--- a/styles/components/_Downloader.sass
+++ b/styles/components/_Downloader.sass
@@ -12,7 +12,7 @@ li.DownloaderItem
 	span
 		text-align: center
 		margin: 0 0 25px
-		@include theme-color-gray-else-gray75
+		@include theme-color-gray-else-gray25
 
 	span.DownloadSizeProgress
 		margin-top: 25px
